RESOLVED FIXED76352
CSSCanvasValue can't be renamed, enforce this at compile-time.
https://bugs.webkit.org/show_bug.cgi?id=76352
Summary CSSCanvasValue can't be renamed, enforce this at compile-time.
Andreas Kling
Reported 2012-01-15 18:05:59 PST
Instead of having CSSCanvasValue::setName(), the constructor should take the name as an argument.
Attachments
Patch (2.72 KB, patch)
2012-01-15 18:09 PST, Andreas Kling
koivisto: review+
Andreas Kling
Comment 1 2012-01-15 18:09:48 PST
Antti Koivisto
Comment 2 2012-01-16 03:56:24 PST
Comment on attachment 122578 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=122578&action=review > Source/WebCore/css/CSSParser.cpp:6454 > CSSParserValue* a = args->current(); > if (!a || a->unit != CSSPrimitiveValue::CSS_IDENT) Maybe use a more descriptive name than 'a' since you are here. > Source/WebCore/css/CSSParser.cpp:6457 > - canvas = result; > + > + canvas = CSSCanvasValue::create(a->string); I wouldn't add an empty line here.
Andreas Kling
Comment 3 2012-01-16 05:00:50 PST
Note You need to log in before you can comment on or make changes to this bug.