CSSCanvasValue can't be renamed, enforce this at compile-time. <http://webkit.org/b/76352>

Reviewed by Antti Koivisto.

Have the CSSCanvasValue constructor take the name as an argument instead of
having a setName() that's only called from one place in CSSParser.

* css/CSSCanvasValue.h:
(WebCore::CSSCanvasValue::create):
(WebCore::CSSCanvasValue::CSSCanvasValue):
* css/CSSParser.cpp:
(WebCore::CSSParser::parseCanvas):


Canonical link: https://commits.webkit.org/93189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105056 268f45cc-cd09-0410-ab3c-d52691b4dbfc